<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanc_sale"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Login_activity">



 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">


  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/OnMove"
      android:gravity="center"
      android:textColor="@color/azul"
      android:textSize="35dp"
      android:layout_marginBottom="40dp">
  </TextView>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/se_connecter"
      android:gravity="center"
      android:textColor="@color/azul"
      android:textSize="25dp"
      android:layout_marginBottom="30dp">
  </TextView>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/VotreEmail"
      android:textColor="@color/black"
      android:textSize="20dp"
      android:layout_marginBottom="10dp">
  </TextView>

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/ic_email"
      android:hint="    Ex:abc@exmple.com"
      android:background="@drawable/button"
      android:padding="12dp"
      android:layout_marginBottom="15dp"
      android:id="@+id/edit_email">
  </EditText>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/MDP"
      android:textColor="@color/black"
      android:textSize="20dp"
      android:layout_marginBottom="10dp">
  </TextView>


  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/ic_eye"
      android:hint="  Mot de passe "
      android:background="@drawable/button"
      android:padding="12dp"
      android:id="@+id/edit_mdp">
  </EditText>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">




  </LinearLayout>
  <Button
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/acceder"
      android:backgroundTint="@color/azul"
      android:layout_marginTop="30dp"
      android:textSize="20dp"
      android:id="@+id/btn_acceder" >
  </Button>
     <ProgressBar
         android:id="@+id/progressbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/containerComponents"/>

     <TextView
         android:id="@+id/text_page_inscription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/text_inscription"
         android:textSize="20dp"
         android:gravity="center"
         android:textColor="@color/azul"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="30dp"
         app:layout_constraintTop_toBottomOf="@id/progressbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 </LinearLayout>

</RelativeLayout>



