<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="80dp">
        <Button
            android:id="@+id/discoverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bluetooth"
            android:layout_marginStart="90dp" />

        <Button
            android:id="@+id/buttonRappel"
            android:layout_width="370dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/bleu_royale"
            android:text="@string/rappel"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonMedoc"
            android:layout_width="370dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/bleu2"
            android:text="@string/Medoc"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonRDV"
            android:layout_width="370dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/lavendre"
            android:text="@string/RDV"
            android:textSize="25sp" />



    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>
